--- a/xrapla/WebContent/css/style.css
+++ b/xrapla/WebContent/css/style.css
@@ -1,4 +1,4 @@
-@import url('font-face.css');
+﻿@import url('font-face.css');
 
 * {
 	font: 16px verdana, arial, sans-serif;
@@ -7,8 +7,8 @@
 }
 
 html {
-	width: 100%;
-	height: 100%;
+	min-width: 100%;
+	min-height: 100%;
 
 	background: #33b5e5; /* Old browsers */
 	background: -moz-linear-gradient(top,  #33b5e5 0%, #0099cc 100%); /* FF3.6+ */
@@ -22,7 +22,7 @@ html {
 
 body {
 	margin: 0;
-	padding: 24px;
+	padding: 24px 24px 0 24px;
 }
 
 h1 {
@@ -63,6 +63,10 @@ h2 {
 }
 
 span.widget {
+	display: inline-block;
+}
+
+div.widget {
 	display: inline-block;
 }
 
