--- a/xrapla/WebContent/css/login.css
+++ b/xrapla/WebContent/css/login.css
@@ -1,4 +1,4 @@
-﻿#login_container {
+#login_container {
 	width: 100%;
 	position: absolute;
 	left: 0;
@@ -20,4 +20,13 @@ div.row {
 #login_container .button {
 	margin-top: 8px;
 	width: 100%;
+}
+
+#error {
+	display: none;
+	width: 100%;
+	margin: 16px 0 8px 0;
+	text-align: center;
+	color: #ff4444;
+	font-weight: bold;
 }
