--- a/trunk/xrapla/WebContent/css/style.css
+++ b/trunk/xrapla/WebContent/css/style.css
@@ -48,6 +48,23 @@ h2 {
 	color: white;
 }
 
+#js_warning {
+	background-color: #ff4444;
+	-webkit-box-shadow:  0px 2px 4px 0px #666666;
+   	box-shadow:  0px 2px 4px 0px #666666;
+	color: white;
+	position: absolute;
+	padding: 8px 0;
+	text-align: center;
+	width: 100%;
+	top: 0;
+	left: 0;
+}
+
+.js_enabled #js_warning {
+	display: none;
+}
+
 .widget {
 	-webkit-border-radius: 16px;
 	-moz-border-radius: 16px;
@@ -198,4 +215,5 @@ input[type=password] {
 input[type=text]:focus,
 input[type=password]:focus {
 	border: 1px solid #33b5e5;
+	outline: 1px solid #33b5e5;
 }
