--- a/xrapla_old/.settings/org.eclipse.wst.common.component
+++ b/xrapla_old/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="xrapla">
+    <wb-module deploy-name="xrapla_old">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="xrapla"/>
-        <property name="java-output-path" value="/xrapla/build/classes"/>
+        <property name="java-output-path" value="/xrapla_old/build/classes"/>
+        <property name="context-root" value="xrapla_old"/>
     </wb-module>
 </project-modules>
