--- a/trunk/xraplaWeb/WebContent/css/calendar.css
+++ b/trunk/xraplaWeb/WebContent/css/calendar.css
@@ -9,15 +9,18 @@
 
 #calendar #wrapper {
 	display: block;
-	width: 100%;
-	height: 100%;
 	overflow: auto;
+	position: absolute;
+	left: 16px;
+	right: 16px;
+	top: 16px;
+	bottom: 16px;
 }
 
 #calendar table {
 	width: 100%;
 	border: 1px solid #666666;
-	border-collapse: collapse;	
+	border-collapse: collapse;
 }
 
 #calendar th {
@@ -35,6 +38,12 @@
 #calendar td {
 	border-left: 1px solid #666666;
 	border-right: 1px solid #666666;
+	overflow: visible;
+	padding: auto 4px;
+	position: relative;
+	vertical-align: top;
+	height: 32px;
+	max-height: 32px;
 }
 
 #calendar thead th,
@@ -49,4 +58,41 @@
 
 #calendar tbody tr:nth-child(odd) {
 	border-bottom: 1px solid #D6D6D6;
+}
+
+.appointment {
+	background-color: #ffbb33;
+	border: 2px solid #ff8800;
+	display: block;
+	overflow: hidden;
+	white-space: nowrap;
+	position: relative;
+	margin-bottom: -9999px;
+}
+
+.appointment * {
+	width: 100%;
+	float: left;
+	font-size: 12px;
+}
+
+.appointment .time {
+	font-weight: bold;
+	margin-bottom: 4px;
+}
+
+.appointment .title {
+	margin-bottom: 8px;
+}
+
+.appointment .docent {
+	font-style: italic;
+}
+
+.appointment .room {
+	font-style: italic;
+}
+
+.appointment .category {
+	font-style: italic;
 }
