--- a/trunk/xraplaWeb/WebContent/css/calendar.css
+++ b/trunk/xraplaWeb/WebContent/css/calendar.css
@@ -66,8 +66,18 @@
 	top: 24px;
 }
 
+#weekselect * {
+	line-height: 32px;
+}
+
+#weekselect span {
+	font-weight: bold;
+	color: white;
+}
+
 #weekselect .previous,
-#weekselect .next {
+#weekselect .next,
+#weekselect .go {
 	color: white;
 	font-weight: bold;
 }
@@ -80,6 +90,22 @@
 	margin-left: 8px;
 }
 
+#weekselect .go {
+	margin-left: 8px;
+}
+
+#weekselect #year {
+	width: auto;
+}
+
+#day {
+	width: 64px;
+}
+
+#month {
+	width: 160px;
+}
+
 .appointment {
 	background-color: #ffbb33;
 	border: 2px solid #ff8800;
@@ -88,6 +114,16 @@
 	white-space: nowrap;
 	position: relative;
 	margin-bottom: -9999px;
+	padding-left: 2px;
+}
+
+.appointment.exam {
+	background-color: #ff4444;
+	border-color: #cc0000;
+}
+
+.appointment.exam * {
+	color: black;
 }
 
 .appointment * {
